centrality/NBD/PbPb/double_side/out00
1302238
jobsub.slurm
vmp1135
In file included from input_line_24:1:
/gpfs22/home/xuq7/HI/centrality/NBD/PbPb/double_side/store.C:7:2: error: unknown type name 'NBD'
        NBD *l;
        ^
/gpfs22/home/xuq7/HI/centrality/NBD/PbPb/double_side/store.C:13:24: error: unknown type name 'NBD'
        if(Gth<nGlau) l = new NBD(datafile,stdGlaulist[Gth],histoname);
                              ^
/gpfs22/home/xuq7/HI/centrality/NBD/PbPb/double_side/store.C:14:15: error: unknown type name 'NBD'
        else l = new NBD(datafile,stdGlaulist[0],histoname);
                     ^
/gpfs22/home/xuq7/HI/centrality/NBD/PbPb/double_side/store.C:22:24: error: unknown type name 'NBD'
        if(Gth<nGlau) l = new NBD(datafile,Gri055Glaulist[Gth],histoname);
                              ^
/gpfs22/home/xuq7/HI/centrality/NBD/PbPb/double_side/store.C:23:15: error: unknown type name 'NBD'
        else l = new NBD(datafile,Gri055Glaulist[0],histoname);
                     ^
/gpfs22/home/xuq7/HI/centrality/NBD/PbPb/double_side/store.C:31:24: error: unknown type name 'NBD'
        if(Gth<nGlau) l = new NBD(datafile,Gri101Glaulist[Gth],histoname);
                              ^
/gpfs22/home/xuq7/HI/centrality/NBD/PbPb/double_side/store.C:32:15: error: unknown type name 'NBD'
        else l = new NBD(datafile,Gri101Glaulist[0],histoname);
                     ^
